# lama-rv-workshop-template

./: .gitignore  Makefile  README.md
comp/: CMakeLists.txt
comp/include/: bytefile.h  code_buffer.h  compiler.h  error.h  inst_reader.h  instruction.h  instructions.h  opcode.h  register.h  symb_stack.h
comp/src/: bytefile.cpp  lama_rv.cpp
performance/: Makefile
regression/: .gitignore  Makefile  gen.ml  test001.ref  test002.ref  test003.ref  test004.ref  test005.ref  test006.ref  test007.ref  test008.ref  test009.ref  test010.ref  test012.ref  test013.ref  test014.ref  test015.ref  test016.ref  test017.ref  test018.ref  test023.ref  test024.ref  test025.ref  test026.ref  test027.ref  test028.ref  test034.ref  test036.ref  test040.ref  test041.ref  test042.ref  test045.ref  test046.ref  test050.ref  test054.ref  test059.ref  test063.ref  test072.ref  test074.ref  test077.ref  (+29 more)
runtime/: Makefile  runtime.c
